2.3
-----
 
2.2
-----
- improvement: opting out of Tracks syncs with WordPress.com
 
2.1
-----
- improvement: improved support for RTL languages in the Dashboard
- enhancement: You can now view product images on orders. Tapping on Products in Orders will present a view-only version of the Product's Details.
 
2.0
-----
- bugfix: dates in the Order Details screen are now localised.
- improvement: improved support for larger font sizes in the login screen
 
1.9
-----
- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
- new feature: You can now manually add shipment tracking to an Order. This feature is for users who have the [Shipment Tracking plugin](https://woocommerce.com/products/shipment-tracking) installed.
- bugfix: fixes Store Picker: some users are unable to continue after logging in.
- bugfix: fixes a crash when the network connection is slow
 
1.8
-----

1.7.1
-----
- Fixed a bug where Order List did not load for some users.
- update: this app supports iOS 12.0 and up.
- improvement: improved support for large text sizes.
- bugfix: fixes Order List not loading for some users.
- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
 
1.7
-----
- improvement: you can now log in using a site address.

1.6
-----
- improvement: Tracking numbers can now be copied to the pasteboard from the order details screen.

1.5
-----
- bugfix: Sometimes Settings would style all the options like "Log Out". No longer happens now.
- bugfix: order status refreshes upon pull-to-refresh in Order Details
- bugfix: payment status label background color showing up beyond rounded border
- improvement: change top performers text from "Total Product Order" to "Total orders" for clarity
- bugfix: fixed an issue on the order details screen where the shipment tracking dates were incorrect

1.4
-----
- bugfix: fix a crash happening on log out