@@ -1,5 +1,7 @@
 2.3
 -----
+- Improvement: improved Dynamic Type support in the body of the notification in the Notifications tab.
+
  
 2.2
 -----
